<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fragment2Color"
    tools:context=".Fragment2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/fragment2"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/dataFrom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/fragment2Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/data_to_frag_1"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSendToFrag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment2Data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sendDataToFrag1"
        android:backgroundTint="@color/black"/>
</RelativeLayout>